--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^5.0.0",
     "koa-json-error": "^3.1.2",
+    "koa-jwt": "^4.0.3",
     "koa-parameter": "^3.0.1",
     "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^6.4.6"
   },
   "devDependencies": {
